--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "email-validator": "^2.0.4",
     "firebase": "^8.3.1",
     "next": "10.0.9",
     "react": "17.0.2",
